--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "jayson": "^4.0.0",
     "knex": "^2.3.0",
     "mock-browser": "^0.92.14",
+    "node-os-utils": "^1.3.7",
     "serialport": "^10.5.0",
     "socket.io": "^4.5.4",
-    "sqlite3": "^5.1.4"
+    "sqlite3": "^5.1.4",
+    "systeminformation": "^5.17.0"
   }
 }
