--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "knex": "^2.3.0",
     "mock-browser": "^0.92.14",
     "node-os-utils": "^1.3.7",
+    "os-utils": "^0.0.14",
     "serialport": "^10.5.0",
     "socket.io": "^4.5.4",
     "sqlite3": "^5.1.4",
